# yeast-so-you-know

./: Cargo.toml  Makefile.toml  README.adoc  README.org
.cargo/: config.toml
in-video-veritas/: Cargo.toml
in-video-veritas/src/: lib.rs  obscura.rs
not-a-teapot/: Cargo.toml
not-a-teapot/assets/: site.css
not-a-teapot/src/: api.rs  cli.rs  main.rs
not-a-teapot/templates/: base.html  index.html
