[package]
name = "not-a-teapot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2"
structopt = "0.3"
warp = "0.3"
http-types = "2.11"
in-video-veritas = {path = "../in-video-veritas"}
