[package]
name = "not-a-teapot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.tracing]
version = "0.1"
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
[dependencies.structopt]
version = "0.3"
[dependencies.warp]
version = "0.3"
[dependencies.http-types]
version = "2.11"

[dependencies.in-video-veritas]
path = "../in-video-veritas"
