[package]
name = "not-a-teapot"
version = "0.2.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = {version = "4.4", features = ["derive"]}

tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

tower = "0.4"
tower-http = {version = "0.5", features = ["fs"]}
axum = "0.7"
askama = "0.12"

[dependencies.in-video-veritas]
path = "../in-video-veritas"
